# terrarium

./: .gitignore  Cargo.toml  README.md  cog.toml  docker-compose.yml  flake.nix
.woodpecker/: container-manifest-release.yml  container-manifest.yml  container-release.yml  container.yml  test.yml
src/: cli.rs  lock.rs  main.rs  state.rs
