[package]
name = "terrarium"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
uuid = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "6.1.0"
base64 = "0.22.1"
authur = { git = "https://git.hydrar.de/jmarya/authur", features = [ "axum" ] }
argh = "0.1.13"
